add linkedin to the html

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Sobre mim</h1>
         <p>Supervisor de engenharia de dados</p>
+        <a href="https://www.linkedin.com/in/vicentepietrobon/">Linkedin</a>
     </body>
 </html>
